Also export the wgo objecct.

--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -763,7 +763,7 @@ Save data
 =========
 
 ```{r save_data}
-save(gbs, unal, coa, unmap, unalMap, tra, tra2, coa2, unmap2, longShort, file = "BreakPoints.Rdata")
+save(gbs, unal, coa, unmap, unalMap, tra, tra2, coa2, unmap2, wgo, longShort, file = "BreakPoints.Rdata")
 system("echo '9f273f099ecbfa44899b6c343d1382f1  BreakPoints.Rdata' | md5sum -c", intern = TRUE)
 ```
 
