--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -266,7 +266,7 @@ regions, frequency of introns and exons are comparable.  In contrary, within
 coalesced mapped regions, the exon annotations are over-represented.
 
 ```{r genomic_features_byType_accessory_Functions}
-prepareFreqPlot <- function(gb, annot, rep, win = 1500) {
+prepareFreqPlot <- function(gb, annot, rep, win = 1000) {
   l <- list()
   l$genes  <- feature_coverage(gb,     genes(annot),         win = win, lab = "genes",  direction = "left")
   #l$cds    <- feature_coverage(gb,     cds(annot),           win = win, lab = "CDS",    direction = "left")
@@ -369,19 +369,21 @@ regions of 1 bp on centers, rather than changing the accessory function.
 current_GB_wide_c    <- current_GB_wide    |> plyranges::anchor_center() |> plyranges::mutate(width=1)
 current_GB_narrow_c  <- current_GB_narrow  |> plyranges::anchor_center() |> plyranges::mutate(width=1)
 current_GB_unmap_c   <- current_GB_unmap   |> plyranges::anchor_center() |> plyranges::mutate(width=1)
+current_GB_unal_c    <- current_GB_unal    |> plyranges::anchor_center() |> plyranges::mutate(width=1)
 current_GB_unalMap_c <- current_GB_unalMap |> plyranges::anchor_center() |> plyranges::mutate(width=1)
 
 hmListWide_c    <- prepareFreqPlot(current_GB_wide_c,    annots$Oki, reps$Oki)
 hmListNarrow_c  <- prepareFreqPlot(current_GB_narrow_c,  annots$Oki, reps$Oki)
 hmListUnmap_c   <- prepareFreqPlot(current_GB_unmap_c,   annots$Oki, reps$Oki)
+hmListUnal_c    <- prepareFreqPlot(current_GB_unal_c,    annots$Oki, reps$Oki)
 hmListUnalMap_c <- prepareFreqPlot(current_GB_unalMap_c, annots$Oki, reps$Oki)
 
 rbind(
   hmListNarrow_c  |> prepareGGFreqPlot("01_narrow"),
   hmListUnmap_c   |> prepareGGFreqPlot("02_unmap"),
+  hmListUnal_c    |> prepareGGFreqPlot("02b_unmap"),
   hmListWide_c    |> prepareGGFreqPlot("03_wide"),
   hmListUnalMap_c |> prepareGGFreqPlot("04_unalMap")
-
 )|> ggplot() +
   aes(pos, freq, col = what) +
   geom_line() +
