--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -266,13 +266,15 @@ regions, frequency of introns and exons are comparable.  In contrary, within
 coalesced mapped regions, the exon annotations are over-represented.
 
 ```{r genomic_features_byType_accessory_Functions}
-prepareFreqPlot <- function(gb, annot, rep, win = 1000) {
+prepareFreqPlot <- function(gb, annot, rep, cne = NULL, win = 1000) {
   l <- list()
   l$genes  <- feature_coverage(gb,     genes(annot),         win = win, lab = "genes",  direction = "left")
   #l$cds    <- feature_coverage(gb,     cds(annot),           win = win, lab = "CDS",    direction = "left")
   l$intron <- feature_coverage(gb,     intronicParts(annot), win = win, lab = "intron", direction = "left")
   l$exon   <- feature_coverage(gb,     exonicParts(annot),   win = win, lab = "exon",   direction = "left")
   l$reps   <- feature_coverage(gb,     rep,                  win = win, lab = "repeats",direction = "left")
+  if (!is.null(cne))
+    l$CNE   <- feature_coverage(gb,    cne,                  win = win, lab = "CNE",    direction = "left")
   #reorder
   newOrder <- order(rowSums(l$intron@image))
   l$intron@image <- l$intron@image[newOrder,]
@@ -293,8 +295,8 @@ prepareGGFreqPlot <- function(x, desc = NULL) {
 #### Synteny as a proxy for aligned region width.
 
 ```{r genomic_features_byType}
-current_GB_wide   <- coa$Oki_Osa[ ! coa$Oki_Osa$nonCoa] |> plyranges::arrange(width)
-current_GB_narrow <- coa$Oki_Osa[   coa$Oki_Osa$nonCoa]
+current_GB_wide   <- gbs$Oki_Osa[ ! gbs$Oki_Osa$nonCoa] |> plyranges::arrange(width)
+current_GB_narrow <- gbs$Oki_Osa[   gbs$Oki_Osa$nonCoa]
 current_GB_unmap   <- unmap$Oki_Osa
 current_GB_unalMap <- unalMap$Oki_Osa
 
@@ -378,13 +380,15 @@ current_GB_unmap_c   <- current_GB_unmap   |> plyranges::anchor_center() |> plyr
 current_GB_unal_c    <- current_GB_unal    |> plyranges::anchor_center() |> plyranges::mutate(width=1)
 current_GB_unalMap_c <- current_GB_unalMap |> plyranges::anchor_center() |> plyranges::mutate(width=1)
 
-hmListWide_c    <- prepareFreqPlot(current_GB_wide_c,    annots$Oki, reps$Oki)
-hmListNarrow_c  <- prepareFreqPlot(current_GB_narrow_c,  annots$Oki, reps$Oki)
-hmListUnmap_c   <- prepareFreqPlot(current_GB_unmap_c,   annots$Oki, reps$Oki)
-hmListUnal_c    <- prepareFreqPlot(current_GB_unal_c,    annots$Oki, reps$Oki)
-hmListUnalMap_c <- prepareFreqPlot(current_GB_unalMap_c, annots$Oki, reps$Oki)
+currentCNE <- ces$ce__50__47$Oki_Osa
 
-( p_center <- rbind(
+hmListWide_c    <- prepareFreqPlot(current_GB_wide_c,    annots$Oki, reps$Oki, currentCNE)
+hmListNarrow_c  <- prepareFreqPlot(current_GB_narrow_c,  annots$Oki, reps$Oki, currentCNE)
+hmListUnmap_c   <- prepareFreqPlot(current_GB_unmap_c,   annots$Oki, reps$Oki, currentCNE)
+hmListUnal_c    <- prepareFreqPlot(current_GB_unal_c,    annots$Oki, reps$Oki, currentCNE)
+hmListUnalMap_c <- prepareFreqPlot(current_GB_unalMap_c, annots$Oki, reps$Oki, currentCNE)
+
+p_center <- rbind(
   hmListNarrow_c  |> prepareGGFreqPlot("01_narrow"),
   hmListUnmap_c   |> prepareGGFreqPlot("02_unmap"),
 #  hmListUnal_c    |> prepareGGFreqPlot("02b_unmap"),
@@ -394,7 +398,10 @@ hmListUnalMap_c <- prepareFreqPlot(current_GB_unalMap_c, annots$Oki, reps$Oki)
   aes(pos, freq, col = what) +
   geom_line() +
   facet_wrap(~desc, nrow = 1) +
-  ggtitle("Aligned on region midpoints."))
+  ggtitle("Aligned on region midpoints.")
+
+p_center$data$what  <- p_center$data$what |> sub(pat = "CNE", rep = "CE_50_47")
+p_center
 ```
 
 #### Comparison
