Temporarly pass the data through a serialized file.
Let's see how to do it better once the Deigo cluster is back.

--- a/vignettes/CNEs.Rmd
+++ b/vignettes/CNEs.Rmd
@@ -158,4 +158,6 @@ ces$ce__50__49 <- calculateCEs(50L, 49L)
 ces$ce__50__48 <- calculateCEs(50L, 48L)
 ces$ce__50__47 <- calculateCEs(50L, 47L)
 sapply(ces, sapply, length)
+
+saveRDS(ces, "CEs.Rds")
 ```
