--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -36,6 +36,7 @@ reps        <- OikScrambling:::loadAllRepeats()
 load("BreakPoints.Rdata")
 requireNamespace("rGADEM")    |> suppressPackageStartupMessages()
 requireNamespace("ggseqlogo") |> suppressPackageStartupMessages()
+ces <- readRDS("CEs.Rds")
 ```
 
 # Nucleic acid content heatmaps
