--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -212,59 +212,9 @@ bp_pair_analysis(gr_ref_q1 = coa$Osa_Oki, gr_ref_q2 = coa$Osa_Nor, win = 1000, l
 bp_pair_analysis(gr_ref_q1 = coa$Osa_Oki, gr_ref_q2 = coa$Osa_Aom, win = 1000, lab = "Oki~Aom") |> plotHeatmapMeta()
 ```
 
-# Gene feature coverage around alignment stops (breakpoints)
+# Gene feature coverage around aligned and unaligned genomic regions.
 
-Breakpoints are between mapped regions.  If the unmapped region is broad we have
-little information where the breakpoint originally was.  We set arbitrarly the
-breakpoints to the left-side (end-side) coordinate of mapped regions.
-
-Mapped regions can consist of multiple colinear aligned regions, or be a single
-uncoalesced aligned region.  We will see that they have different properties.
-
-The function `feature_coverage` will plot the coverage of tandem repeats around
-centred alignment stops. 
-
-```{r genomic_features, cache=FALSE}
-current_GB <- coa$Oki_Osa
-hmList_OKI <- list()
-
-hmList_OKI$genes      <- feature_coverage(current_GB, genes(annots$Oki),                         win = 2000, lab = "Oki genes", direction = "left")
-hmList_OKI$promoters  <- feature_coverage(current_GB, promoters(annots$Oki),                     win = 2000, lab = "Oki promoters", direction = "left")
-hmList_OKI$exons      <- feature_coverage(current_GB, exonicParts(annots$Oki),                   win = 2000, lab = "Oki exons", direction = "left")
-hmList_OKI$introns    <- feature_coverage(current_GB, intronicParts(annots$Oki),                 win = 2000, lab = "Oki introns", direction = "left")
-hmList_OKI$cds        <- feature_coverage(current_GB, cds(annots$Oki),                           win = 2000, lab = "Oki cds", direction = "left")
-```
-
-```{r genomic_features_genes_exons_cds, cache=FALSE}
-plotHeatmapMeta(hmList_OKI[c("genes", "exons", "cds")]) # Show they look alike.  We keep "exons"
-```
-
-The features _genes_, _exons_ and _cds_ have comparable profiles.  Let's keep only _exons_ in the rest of the analysis.
-
-```{r genomic_features_2, cache=FALSE}
-plotHeatmapMeta(hmList_OKI[c("promoters", "exons", "introns")])
-```
-
-Positive coordinates start in aligned regions and negative coordinates start
-in unaligned regions.  As we move further from 0, we can not guarantee that
-the statement is still true because some regions have a width narrower than
-the plot window.  This is why the values tend to equilibrate near the
-boundaries.
-
-Aligned regions are enriched in exons and depleted in introns.
-
-## Breakpoints of wide and narrow regions
-
-Most of the narrow-width aligned regions did not coalesce.  We use this
-as a classifier instead of an arbitrary width cutoff.  See
-`vignette("RegionWidths", package = "OikScrambling")` for details.
-
-### Coding sequences
-
-Close to the breakpoint of uncoalesced mapped regions, exon annotations are
-depleted, which makes sense, as exons are usually mapable.  Within the mapped
-regions, frequency of introns and exons are comparable.  In contrary, within
-coalesced mapped regions, the exon annotations are over-represented.
+## Accessory functions
 
 ```{r genomic_features_byType_accessory_Functions}
 prepareFreqPlot <- function(gb, annot, rep, cne = NULL, win = 1000) {
@@ -293,36 +243,99 @@ prepareGGFreqPlot <- function(x, desc = NULL) {
 }
 ```
 
-#### Synteny as a proxy for aligned region width.
+## Centering on left-aligned boundaries.
+
+Breakpoints are between mapped regions.  If the unmapped region is broad we have
+little information where the breakpoint originally was.  We set arbitrarly the
+breakpoints to the left-side (end-side) coordinate of genomic regions.
+
+Mapped regions can consist of multiple colinear aligned regions, or be a single
+uncoalesced aligned region.  We will see that they have different properties.
+
+Our annotations is mostly made of coding exons, so the features _exons_ and
+_cds_ have very similar profiles.  Therefore we keep only _exons_ in the rest of
+the analysis.
+
+Positive coordinates (and zero) start in selected regions and negative
+coordinates start outside these regions.  As we move further from 0, we can not
+guarantee that the statement is still true because some regions have a width
+narrower than the plot window.  This is why the values tend to equilibrate
+away from the boundaries.
+
+```{r genomic_features_byType_accessory_Functions}
+prepareFreqPlot <- function(gb, annot, rep, cne = NULL, win = 1000) {
+  l <- list()
+  l$genes  <- feature_coverage(gb,     genes(annot),         win = win, lab = "genes",  direction = "left")
+  #l$cds    <- feature_coverage(gb,     cds(annot),           win = win, lab = "CDS",    direction = "left")
+  l$intron <- feature_coverage(gb,     intronicParts(annot), win = win, lab = "intron", direction = "left")
+  l$exon   <- feature_coverage(gb,     exonicParts(annot),   win = win, lab = "exon",   direction = "left")
+  l$reps   <- feature_coverage(gb,     rep,                  win = win, lab = "repeats",direction = "left")
+  if (!is.null(cne))
+    l$CNE   <- feature_coverage(gb,    cne,                  win = win, lab = "CNE",    direction = "left")
+  #reorder
+  newOrder <- order(rowSums(l$intron@image))
+  l$intron@image <- l$intron@image[newOrder,]
+  l$exon@image   <- l$exon@image[newOrder,]
+  l
+}
+
+prepareGGFreqPlot <- function(x, desc = NULL) {
+  l <- lapply(names(x), \(name){
+    val <- colSums(x[[name]]@image)
+    what <- name
+    tibble::tibble(val, freq = val / nrow(x[[name]]@image), what, pos = 1:length(val) - round(length(val)) / 2, desc)
+  })
+   do.call(rbind, l)
+}
+```
+
+Aligned regions are enriched in exons and depleted in introns.
+
+Close to the breakpoint of uncoalesced mapped regions, exon annotations are
+depleted, which makes sense, as exons are usually mapable.  Within the mapped
+regions, frequency of introns and exons are comparable.  In contrary, within
+coalesced mapped regions, the exon annotations are over-represented.
 
 ```{r genomic_features_byType}
-current_GB_wide   <- gbs$Oki_Osa[ ! gbs$Oki_Osa$nonCoa] |> plyranges::arrange(width)
-current_GB_narrow <- gbs$Oki_Osa[   gbs$Oki_Osa$nonCoa]
-current_GB_unmap   <- unmap$Oki_Osa
-current_GB_unalMap <- unalMap$Oki_Osa
+computePlotData <- function(target, query, CE=NULL) {
+  pair <- paste(target, query, sep = "_")
+  current_GB_aln_nonCoa     <- gbs[[pair]][   gbs[[pair]]$nonCoa]
+  current_GB_aln_coa        <- gbs[[pair]][ ! gbs[[pair]]$nonCoa]
+  current_GB_syn_block      <- coa[[pair]][ ! coa[[pair]]$nonCoa]
+  # We do not use unal, because it overlaps with unalMap
+  current_GB_unmap          <- unmap[[pair]]
+  current_GB_unalMap        <- unalMap[[pair]]
+  
+  hmList <- SimpleList()
+  hmList$aln_nonCoa <- prepareFreqPlot(current_GB_aln_nonCoa, annots[[target]], reps[[target]], CE)
+  hmList$aln_coa    <- prepareFreqPlot(current_GB_aln_coa,    annots[[target]], reps[[target]], CE)
+  hmList$syn_block  <- prepareFreqPlot(current_GB_syn_block,  annots[[target]], reps[[target]], CE)
+  hmList$unmap      <- prepareFreqPlot(current_GB_unmap,      annots[[target]], reps[[target]], CE)
+  hmList$unalMap    <- prepareFreqPlot(current_GB_unalMap,    annots[[target]], reps[[target]], CE)
+  hmList
+}
 
-current_GB_wide   |> width() |> summary()
-current_GB_narrow |> width() |> summary()
-current_GB_unmap  |> width() |> summary()
-current_GB_unalMap|> width() |> summary()
-
-hmListWide    <- prepareFreqPlot(current_GB_wide,    annots$Oki, reps$Oki)
-hmListNarrow  <- prepareFreqPlot(current_GB_narrow,  annots$Oki, reps$Oki)
-hmListUnmap   <- prepareFreqPlot(current_GB_unmap,   annots$Oki, reps$Oki)
-hmListUnalMap <- prepareFreqPlot(current_GB_unalMap, annots$Oki, reps $Oki)
+hmList_to_plot <- computePlotData("Oki", "Osa", ces$ce__50__48$Oki_Osa)
 
 (p_boundary <- rbind(
-  hmListNarrow  |> prepareGGFreqPlot("01_narrow"),
-  hmListUnmap   |> prepareGGFreqPlot("02_unmap"),
-  hmListWide    |> prepareGGFreqPlot("03_wide"),
-  hmListUnalMap |> prepareGGFreqPlot("04_unalMap")
+  hmList_to_plot$aln_nonCoa  |> prepareGGFreqPlot("01_isolated_alns"),
+  hmList_to_plot$unmap       |> prepareGGFreqPlot("02_unal_unmap"),
+  hmList_to_plot$syn_block   |> prepareGGFreqPlot("03_synteny_blk"),
+  hmList_to_plot$unalMap     |> prepareGGFreqPlot("04_unal_syntenic"),
+  hmList_to_plot$aln_coa     |> prepareGGFreqPlot("05_aln_syntenic")
 
 )|> ggplot() +
   aes(pos, freq, col = what) +
   geom_line() +
   facet_wrap(~desc, nrow = 1) +
-  ggtitle("Aligned on regions left boundary"))
+  ggtitle("Aligned on regions left boundary. CNE is 50/48.  Okinawa - Osaka"))
 ```
+
+
+Most of the narrow-width aligned regions did not coalesce.  We use this
+as a classifier instead of an arbitrary width cutoff.  See
+`vignette("RegionWidths", package = "OikScrambling")` for details.
+
 
 #### Linked regions
 
