--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -37,6 +37,7 @@ load("BreakPoints.Rdata")
 requireNamespace("rGADEM")    |> suppressPackageStartupMessages()
 requireNamespace("ggseqlogo") |> suppressPackageStartupMessages()
 ces <- readRDS("CEs.Rds")
+tfbs <- readRDS("pwmMatchesOki_12_95.Rds")
 ```
 
 # Nucleic acid content heatmaps
@@ -217,7 +218,7 @@ bp_pair_analysis(gr_ref_q1 = coa$Osa_Oki, gr_ref_q2 = coa$Osa_Aom, win = 1000, l
 ## Accessory functions
 
 ```{r genomic_features_byType_accessory_Functions}
-prepareFreqPlot <- function(gb, annot, rep, cne = NULL, win = 1000) {
+prepareFreqPlot <- function(gb, annot, rep, cne = NULL, tfbs = NULL, win = 1000) {
   l <- list()
   l$genes  <- feature_coverage(gb,     genes(annot),         win = win, lab = "genes",  direction = "left")
   #l$cds    <- feature_coverage(gb,     cds(annot),           win = win, lab = "CDS",    direction = "left")
@@ -226,6 +227,8 @@ prepareFreqPlot <- function(gb, annot, rep, cne = NULL, win = 1000) {
   l$reps   <- feature_coverage(gb,     rep,                  win = win, lab = "repeats",direction = "left")
   if (!is.null(cne))
     l$CNE   <- feature_coverage(gb,    cne,                  win = win, lab = "CNE",    direction = "left")
+  if (!is.null(tfbs))
+    l$tfbs  <- feature_coverage(gb,    tfbs,                 win = win, lab = "TFBS",   direction = "left")
   #reorder
   newOrder <- order(rowSums(l$intron@image))
   l$intron@image <- l$intron@image[newOrder,]
@@ -262,33 +265,6 @@ guarantee that the statement is still true because some regions have a width
 narrower than the plot window.  This is why the values tend to equilibrate
 away from the boundaries.
 
-```{r genomic_features_byType_accessory_Functions}
-prepareFreqPlot <- function(gb, annot, rep, cne = NULL, win = 1000) {
-  l <- list()
-  l$genes  <- feature_coverage(gb,     genes(annot),         win = win, lab = "genes",  direction = "left")
-  #l$cds    <- feature_coverage(gb,     cds(annot),           win = win, lab = "CDS",    direction = "left")
-  l$intron <- feature_coverage(gb,     intronicParts(annot), win = win, lab = "intron", direction = "left")
-  l$exon   <- feature_coverage(gb,     exonicParts(annot),   win = win, lab = "exon",   direction = "left")
-  l$reps   <- feature_coverage(gb,     rep,                  win = win, lab = "repeats",direction = "left")
-  if (!is.null(cne))
-    l$CNE   <- feature_coverage(gb,    cne,                  win = win, lab = "CNE",    direction = "left")
-  #reorder
-  newOrder <- order(rowSums(l$intron@image))
-  l$intron@image <- l$intron@image[newOrder,]
-  l$exon@image   <- l$exon@image[newOrder,]
-  l
-}
-
-prepareGGFreqPlot <- function(x, desc = NULL) {
-  l <- lapply(names(x), \(name){
-    val <- colSums(x[[name]]@image)
-    what <- name
-    tibble::tibble(val, freq = val / nrow(x[[name]]@image), what, pos = 1:length(val) - round(length(val)) / 2, desc)
-  })
-   do.call(rbind, l)
-}
-```
-
 Aligned regions are enriched in exons and depleted in introns.
 
 Close to the breakpoint of uncoalesced mapped regions, exon annotations are
@@ -297,7 +273,7 @@ regions, frequency of introns and exons are comparable.  In contrary, within
 coalesced mapped regions, the exon annotations are over-represented.
 
 ```{r genomic_features_byType}
-computePlotData <- function(target, query, CE=NULL) {
+computePlotData <- function(target, query, CE=NULL, tfbs=NULL) {
   pair <- paste(target, query, sep = "_")
   current_GB_aln_nonCoa     <- gbs[[pair]][   gbs[[pair]]$nonCoa]
   current_GB_aln_coa        <- gbs[[pair]][ ! gbs[[pair]]$nonCoa]
@@ -307,15 +283,15 @@ computePlotData <- function(target, query, CE=NULL) {
   current_GB_unalMap        <- unalMap[[pair]]
   
   hmList <- SimpleList()
-  hmList$aln_nonCoa <- prepareFreqPlot(current_GB_aln_nonCoa, annots[[target]], reps[[target]], CE)
-  hmList$aln_coa    <- prepareFreqPlot(current_GB_aln_coa,    annots[[target]], reps[[target]], CE)
-  hmList$syn_block  <- prepareFreqPlot(current_GB_syn_block,  annots[[target]], reps[[target]], CE)
-  hmList$unmap      <- prepareFreqPlot(current_GB_unmap,      annots[[target]], reps[[target]], CE)
-  hmList$unalMap    <- prepareFreqPlot(current_GB_unalMap,    annots[[target]], reps[[target]], CE)
+  hmList$aln_nonCoa <- prepareFreqPlot(current_GB_aln_nonCoa, annots[[target]], reps[[target]], CE, tfbs)
+  hmList$aln_coa    <- prepareFreqPlot(current_GB_aln_coa,    annots[[target]], reps[[target]], CE, tfbs)
+  hmList$syn_block  <- prepareFreqPlot(current_GB_syn_block,  annots[[target]], reps[[target]], CE, tfbs)
+  hmList$unmap      <- prepareFreqPlot(current_GB_unmap,      annots[[target]], reps[[target]], CE, tfbs)
+  hmList$unalMap    <- prepareFreqPlot(current_GB_unalMap,    annots[[target]], reps[[target]], CE, tfbs)
   hmList
 }
 
-hmList_to_plot <- computePlotData("Oki", "Osa", ces$ce__50__48$Oki_Osa)
+hmList_to_plot <- computePlotData("Oki", "Osa", ces$ce__50__48$Oki_Osa, tfbs)
 
 (p_boundary <- rbind(
   hmList_to_plot$aln_nonCoa  |> prepareGGFreqPlot("01_isolated_alns"),
