Prepare to check CNE widths

--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -25,6 +25,7 @@ library('ggplot2')
 requireNamespace('patchwork') |> suppressPackageStartupMessages()
 genomes <- OikScrambling:::loadAllGenomes()
 load("BreakPoints.Rdata")
+ces <- readRDS("CEs.Rds")
 ```
 
 See `vignette("LoadGenomicBreaks", package = "OikScrambling")` for how the
