Idiomatic way to the midpoint of GRanges.
10 times slower, but we are in still in the sub-second range:

> microbenchmark::microbenchmark(times = 100, start(resize(gbs$Oki_Osa, 1, fix="center")), grMidpoint(gbs$Oki_Osa))
Unit: microseconds
                                          expr       min       lq      mean     median       uq       max neval
 start(resize(gbs$Oki_Osa, 1, fix = "center")) 21315.815 21717.92 23142.937 21952.1295 22871.90  37679.42   100
                       grMidpoint(gbs$Oki_Osa)   910.545   959.54  5449.091   995.1705  1042.96 441901.14   100

--- a/vignettes/SegmentMovements.Rmd
+++ b/vignettes/SegmentMovements.Rmd
@@ -39,10 +39,7 @@ Whenever a collinear segment moves between species, if the homologous segment is
 ```{r calculate_movement_distances}
 # Find midpoints of a GRanges.
 grMidpoint <- function(gr) {
-  starts <- as.data.frame(ranges(gr))$start
-  ends <- as.data.frame(ranges(gr))$end
-  mids <- (starts+ends)/2
-  mids
+  start(resize(gr, 1, fix = "center"))
 }
 
 # Find distance between two equivalent GRanges.
