--- a/vignettes/SegmentMovements.Rmd
+++ b/vignettes/SegmentMovements.Rmd
@@ -120,6 +120,59 @@ plotSegDists(segDistsCoa$Oki_Bar, facet.by='seqnames~Arm', binWidth=100000) + gg
 plotSegDists(segDistsCoa$Osa_Bar, facet.by='seqnames~Arm', binWidth=100000) + ggtitle("Osa-Bar: segment movement distances (coalesced)")
 ```
 
+## Plotting segment movements relative to coordinates
+
+Uses, start coordinate as a proxy for midpoint, but the difference should be
+hardly perceptible.
+
+```{r funct_to_plot_movement_distance_on_coords}
+plot_movement_distance_on_coords <- \(gb) gb |>
+  as.data.frame() |>
+  ggplot() +
+    aes(start, distance, col=Arm) +
+    geom_point() +
+    xlab("Start on target") +
+    ylab("Distance between midpoints on query and target") +
+    facet_wrap(~seqnames)
+```
+
+```{r plot_movement_distance_on_coords_oki_osa_gb, fig.width=15, fig.height=8, dev="svg", fig.ext="svg"}
+segDists$Oki_Osa |> plot_movement_distance_on_coords() + ggtitle("Oki - Osa")
+```
+```{r plot_movement_distance_on_coords_oki_bar_gb, fig.width=15, fig.height=8, dev="svg", fig.ext="svg"}
+segDists$Oki_Bar |> plot_movement_distance_on_coords() + ggtitle("Oki - Bar")
+```
+```{r plot_movement_distance_on_coords_osa_bar_gb, fig.width=15, fig.height=8, dev="svg", fig.ext="svg"}
+segDists$Osa_Bar |> plot_movement_distance_on_coords() + ggtitle("Osa - Bar")
+```
+
+## Plotting distance between query ranges relative to target coordinates
+
+This assumes that the center an unaligned region would be plotted on the same
+pixel as the center of its flanking aligned regions.
+
+```{r funct_to_plot_distance_to_next_query_on_coords}
+plot_distance_to_next_query_on_coords <- \(gb) gb |>
+  dist2next() |>
+  as.data.frame() |>
+  ggplot() +
+    aes(end + 1, qdist, col=Arm) +
+    geom_point() +
+    xlab("Start unaligned region on target") +
+    ylab("Distance between flanking regions on query") +
+    facet_wrap(~seqnames)
+```
+
+```{r plot_distance_to_next_query_on_coords_oki_osa_gb, fig.width=15, fig.height=8, dev="svg", fig.ext="svg"}
+segDists$Oki_Osa |> plot_distance_to_next_query_on_coords() + ggtitle("Oki - Osa")
+```
+```{r plot_distance_to_next_query_on_coords_oki_bar_gb, fig.width=15, fig.height=8, dev="svg", fig.ext="svg"}
+segDists$Oki_Bar |> plot_distance_to_next_query_on_coords() + ggtitle("Oki - Bar")
+```
+```{r plot_distance_to_next_query_on_coords_osa_bar_gb, fig.width=15, fig.height=8, dev="svg", fig.ext="svg"}
+segDists$Osa_Bar |> plot_distance_to_next_query_on_coords() + ggtitle("Osa - Bar")
+```
+
 # Session information
 
 ```{r session_information}
