Fix YAML header.

--- a/vignettes/SegmentMovements.Rmd
+++ b/vignettes/SegmentMovements.Rmd
@@ -6,7 +6,7 @@ date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEncoding{UTF-8}
-  %\VignetteIndexEntry{Regions interrupting colinearity}
+  %\VignetteIndexEntry{Segment movement distances}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
   chunk_output_type: console
