--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -365,7 +365,7 @@ it requires the aligned region to be nearby a syntenic region.
 As the plots are hardcoded to use the left border, let's artificially make
 regions of 1 bp on centers, rather than changing the accessory function.
 
-```{r genomic_features_byType}
+```{r genomic_features_byType_center}
 current_GB_wide_c    <- current_GB_wide    |> plyranges::anchor_center() |> plyranges::mutate(width=1)
 current_GB_narrow_c  <- current_GB_narrow  |> plyranges::anchor_center() |> plyranges::mutate(width=1)
 current_GB_unmap_c   <- current_GB_unmap   |> plyranges::anchor_center() |> plyranges::mutate(width=1)
