--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -23,16 +23,15 @@ Search for motifs in regions near genomic breaks.  By default the computations
 that take time are loaded from R objects.  The source code to generate them
 needs to be executed by hand when needed.
 
-## Load pacakges
+# Load pacakges
 
 Core packages that provide functions we use a lot.
 
-```{r loadlib, echo=T, results='hide'}
+```{r loadlib}
 library('OikScrambling')   |> suppressPackageStartupMessages()
-
-(genomes <- OikScrambling:::loadAllGenomes())
-(transcripts <- OikScrambling:::loadAllTranscriptsGR() |> suppressWarnings())
-(load("BreakPoints.Rdata"))
+genomes <- OikScrambling:::loadAllGenomes()
+transcripts <- OikScrambling:::loadAllTranscriptsGR() |> suppressWarnings()
+load("BreakPoints.Rdata")
 
 library('ggplot2')
 
@@ -41,15 +40,7 @@ requireNamespace("JASPAR2020")
 requireNamespace("rGADEM")
 ```
 
-## Genome lengths
-
-```{r genome_properties}
-(genome.lengths <- sapply(genomes, \(g) sum(seqlengths(seqinfo(g)))))
-
-## Genome average AT content
-(genomes.AT <- sapply(genomes, \(g)
-  weighted.mean(letterFrequency(getSeq(g), "AT", as.prob = TRUE), seqlengths(g))))
-```
+# Motif searches
 
 ## Inversions
 
