--- a/vignettes/CNEs.Rmd
+++ b/vignettes/CNEs.Rmd
@@ -38,45 +38,45 @@ Load the alignments in Axt format.
 
 ```{r prepare_axtfiles}
 axt <- SimpleList()
-axt$Oki_Osa <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OKI2018_I69_1.0__OSKA2016v1.9.axt.gz",
+axt$Oki_Osa <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OKI2018_I69_1.0__OSKA2016v1.9.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"),
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OSKA2016v1.9"), "single_sequences.2bit"))
-axt$Oki_Bar <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OKI2018_I69_1.0__Bar2_p4.axt.gz",
+axt$Oki_Bar <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OKI2018_I69_1.0__Bar2_p4.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"),
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.Bar2.p4"),      "single_sequences.2bit"))
-axt$Oki_Kum <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OKI2018_I69_1.0__KUM-M3-7f.axt.gz",
+axt$Oki_Kum <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OKI2018_I69_1.0__KUM-M3-7f.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"),
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.KUM.M3"),       "single_sequences.2bit"))
-axt$Oki_Aom <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OKI2018_I69_1.0__AOM-5-5f.axt.gz",
+axt$Oki_Aom <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OKI2018_I69_1.0__AOM-5-5f.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"),
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.AOM.5"),       "single_sequences.2bit"))
-axt$Oki_Nor <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OKI2018_I69_1.0__OdB3.axt.gz",
+axt$Oki_Nor <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OKI2018_I69_1.0__OdB3.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"),
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.Odioica.reference.v3.0"), "single_sequences.2bit"))
-axt$Oki_Olo <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OKI2018_I69_1.0__O_lon.axt.gz",
+axt$Oki_Olo <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OKI2018_I69_1.0__O_lon.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"))
 second(axt$Oki_Olo) <- forceSeqLengths(second(axt$Oki_Olo))
-axt$Oki_Ova <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OKI2018_I69_1.0__O_van.axt.gz",
+axt$Oki_Ova <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OKI2018_I69_1.0__O_van.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"))
 second(axt$Oki_Ova) <- forceSeqLengths(second(axt$Oki_Ova))
-axt$Oki_Oal <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OKI2018_I69_1.0__O_alb.axt.gz",
+axt$Oki_Oal <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OKI2018_I69_1.0__O_alb.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"))
 second(axt$Oki_Oal) <- forceSeqLengths(second(axt$Oki_Oal))
 
 
-axt$Osa_Oki <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OSKA2016v1.9__OKI2018_I69_1.0.axt.gz",
+axt$Osa_Oki <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OSKA2016v1.9__OKI2018_I69_1.0.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OSKA2016v1.9"), "single_sequences.2bit"),
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"))
 
-axt$Osa_Bar <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OSKA2016v1.9__Bar2_p4.axt.gz",
+axt$Osa_Bar <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OSKA2016v1.9__Bar2_p4.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OSKA2016v1.9"), "single_sequences.2bit"),
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.Bar2.p4"),  "single_sequences.2bit"))
 
-axt$Osa_Aom <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/OSKA2016v1.9__AOM-5-5f.axt.gz",
+axt$Osa_Aom <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/OSKA2016v1.9__AOM-5-5f.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OSKA2016v1.9"), "single_sequences.2bit"),
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.AOM.5"),  "single_sequences.2bit"))
 
-axt$Bar_Oki <- readAxt("~/projects/GenomicBreaks_results/results-v3/last/Bar2_p4__OKI2018_I69_1.0.axt.gz",
+axt$Bar_Oki <- readAxt("/bucket/LuscombeU/common/Breakpoints/Alignments/Oidioi_pairwise_v3/Bar2_p4__OKI2018_I69_1.0.axt.gz",
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.Bar2.p4"),      "single_sequences.2bit"),
                        file.path(system.file("extdata", package="BSgenome.Odioica.local.OKI2018.I69"),  "single_sequences.2bit"))
 ```
